--- a/readme.html
+++ b/readme.html
@@ -1,1 +1,10 @@
-tes fathur
+<div>
+    <div class="field is-horizontal">
+      <div class="field-body">
+        <div class="field is-grouped is-grouped-right">
+            <gov2button button-label="Tambah Data!"></gov2button>
+        </div>
+      </div>
+    </div>
+</div>
+
