--- a/readme.html
+++ b/readme.html
@@ -1,42 +1,14 @@
-<template>
-<div class="control">
-    <a class="button is-block is-primary" @click="toggleClick" :class="{ 'is-warning': isPressed, 'is-large': buttonSize=='large' }" >
-        <span class="icon">
-          <i :class="{'fa fa-minus': isPressed}" class="fa fa-plus"></i>
-        </span>
-        <span>{{ buttonLabel }}</span>
-    </a>
-</div>
-</template>
+Welcome to the gov2button wiki!
+Tag
+<gov2button button-label=""></gov2button>
 
-<script>
-
-module.exports = {
-    name: 'gov2button',
-    props:  {
-        buttonLabel: String,
-        buttonSize: String
-    },
-    data: function () {
-        return {
-            isPressed: false
-        }
-    },
-    methods: {
-        toggleClick: function () {
-            this.isPressed = !this.isPressed;
-            eventBus.$emit('toggleClick',this.isPressed);
-        },
-        resetButton: function () {
-            this.isPressed=false;
-        }
-    },
-    created: function () {
-        eventBus.$on('resetButton', this.resetButton);
-    }
-}
-</script>
-
-<style>
-
-</style>
+Property
+buttonLabel ** type: String ** fungsinya untuk memberi label button
+buttonSize: String ** fungsinya untuk memberi ukuran ** type: String
+Data
+isPressed: false
+Methods
+toggleClick ** fungsinya mengubah nilai var isPresed ke nilai selain yang sedang terkandung
+resetButton ** fungsinya mengubah nilai var isPresed ke false
+Created
+resetButton ** listen event dengan value resetButton, jika ada eksekusi method resetButton di atas
