--- a/readme.html
+++ b/readme.html
@@ -1,22 +1,37 @@
-### Welcome to the gov2button wiki!
-
-***
-### Tag
-***
-`<gov2button button-label=""></gov2button>`
-***
-### Property
-***
-* buttonLabel ** type: String ** fungsinya untuk memberi label button
-* buttonSize: String ** fungsinya untuk memberi ukuran ** type: String
-### Data
-***
-* isPressed: false
-***
-### Methods
-***
-* toggleClick ** fungsinya mengubah nilai var isPresed ke nilai selain yang sedang terkandung
-* resetButton ** fungsinya mengubah nilai var isPresed ke false
-### Created
-***
-* resetButton ** listen event dengan value resetButton, jika ada eksekusi method resetButton di atas
+<!DOCTYPE html>
+<html>
+<head>
+	<title>gov2button</title>
+</head>
+<body>
+	<h1>Welcome to the gov2button wiki!</h1>
+	<hr>
+	<h2>Tag</h2>
+	<hr>
+	<p>
+		<xmp><gov2button button-label=""></gov2button></xmp>
+	</p>
+	<h2>Property</h2>
+	<hr>
+	<ul>
+		<li>buttonLabel ** type: String ** fungsinya untuk memberi label button</li>
+		<li>buttonSize: String ** fungsinya untuk memberi ukuran ** type: String</li>
+	</ul>
+	<h2>Data</h2>
+	<hr>
+	<ul>
+		<li>isPressed: false</li>
+	</ul>
+	<h2>Methods</h2>
+	<hr>
+	<ul>
+		<li>toggleClick ** fungsinya mengubah nilai var isPresed ke nilai selain yang sedang terkandung</li>
+		<li>resetButton ** fungsinya mengubah nilai var isPresed ke false</li>
+	</ul>
+	<h2>Created</h2>
+	<hr>
+	<ul>
+		<li>resetButton ** listen event dengan value resetButton, jika ada eksekusi method resetButton di atas</li>
+	</ul>
+</body>
+</html>
